<resources>
    <string name="app_name">TO-DO List</string>
    <string name="to_do_list">To Do List</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="date_format">%1$d.%2$d.%3$d.</string>
    <string name="time_format">%1$d:%2$d</string>
    <string name="add_to_do">Add TO-DO</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="date_holder">%d</string>
    <string name="date_label">Date</string>
    <string name="edit_to_do">Edit TO-DO</string>
    <string name="save_changes">Save Changes</string>
    <string name="first_letter_format">%c</string>
    <string name="delete_to_do_title">Delete to-do</string>
    <string name="delete_to_do_message">Are you sure that you want to delete this to-do?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="error_toast">Invalid entry</string>
    <string name="search">Search</string>
    <string name="no_search_results">No search results</string>

</resources>
